<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/md_theme_light_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <!-- Back Button -->
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@android:drawable/ic_menu_revert"
                android:contentDescription="@string/back_button_description"
                app:tint="@color/md_theme_light_primary"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/eventIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_pet"
                app:tint="@color/md_theme_light_primary" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_text"
                android:textStyle="bold"
                android:textSize="22sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/md_theme_light_onSurface"/>
        </LinearLayout>

        <!-- Content card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:padding="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/md_theme_light_surface">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="?android:attr/dividerVertical"
                android:showDividers="middle"
                android:dividerPadding="6dp">

                <!-- Type (Bold) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:id="@+id/typeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="whatever type"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                </LinearLayout>

                <!-- Posted Date (Bold) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posted_date_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:id="@+id/postedDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posted_date_value"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                </LinearLayout>

                <!-- Start Date (Bold) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:id="@+id/startDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date_value"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                </LinearLayout>


                <!-- Duration (Bold) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:id="@+id/durationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_value"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                </LinearLayout>

                <!-- Location (Bold) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_value"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                </LinearLayout>

                <!-- Organizer (Bold) -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organizer_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                    <TextView
                        android:id="@+id/organizerText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organizer_value"
                        android:textSize="18sp"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"/>
                </LinearLayout>

                <!-- Description (Bold) -->
                <TextView
                    android:id="@+id/descriptionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_label"
                    android:textStyle="bold"
                    android:textColor="@color/md_theme_light_onSurface"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="6dp"
                    android:textColor="@color/md_theme_light_onSurface"
                    android:textSize="18sp"
                    android:paddingTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Apply Button -->
        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_button_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/md_theme_light_primary"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>
